Preventing code snippet overflow
this fixes the embedded code snippet overflow, which caused the large horizontal scroll

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -123,6 +123,7 @@ hr {
 pre {
   margin: 5px 0 5px 0;
   padding: 5px 10px 5px 10px;
+  overflow-x: auto;
 }
 
 pre, tt, code {
